2003-04-05  Ulrich Drepper  <drepper@redhat.com>

	* malloc/thread-m.h [PTHREAD_MUTEX_INITIALIZER]: If
	HAVE_register_atfork_malloc is defined use __register_atfork_malloc
	instead of __register_atfork.

2003-04-05  Jakub Jelinek  <jakub@redhat.com>

	* stdio-common/reg-printf.c (__register_printf_function): Calloc
	instead of malloc __printf_arginfo_table and __printf_function_table.
	Reported by John Reiser <jreiser@BitWagon.com>.

2003-04-04  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/powerpc64/strchr.S: 64-bit optimizations.
	* sysdeps/powerpc/powerpc64/strlen.S: 64-bit optimizations.

	* sysdeps/powerpc/fpu/bits/mathdef.h (FLT_EVAL_METHOD): Undef before
	defining.

2003-04-04  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/unix/sysv/linux/mips/bits/fcntl.h (struct flock): Adjust
	for n64 abi.

2003-04-03  Roland McGrath  <roland@redhat.com>

	* configure.in: Fix up use of compilation flags to match the build:
	For .s files, $ASFLAGS;
	For .S files, $CPPFLAGS $ASFLAGS;
	For .c files, $CFLAGS $CPPFLAGS;
	when linking, add $LDFLAGS.
	* configure: Regenerated.

2003-04-03  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/getsysstats.c (get_proc_path): Reverse test
	for atomic_compare_and_exchange_bool_acq failure.

2003-04-03  Ulrich Drepper  <drepper@redhat.com>

	* posix/unistd.h: Define _POSIX_VERSION, _POSIX2_VERSION,
	_POSIX2_C_BIND, _POSIX2_C_DEV, _POSIX2_SW_DEV, and
	_POSXI2_LOCALEDEF to 200112L.  Remove _POSIX2_C_VERSION.
	Remove declaration of pthread_atfork.

2003-04-02  Ulrich Drepper  <drepper@redhat.com>

	* locale/iso-639.def: Add many more languages from the current ISO 639.

	* sysdeps/unix/sysv/linux/ipc_priv.h: Define IPCOP_semtimedop.
	* sysdeps/generic/semtimedop.c: New file.
	* sysdeps/unix/sysv/linux/i386/semtimedop.S: New file.
	* sysdeps/unix/sysv/linux/ia64/syscalls.list: Add semtimedop.
	* sysdeps/unix/sysv/linux/x86_64/syscalls.list: Likewise.
	* sysvipc/Makefile (routines): Add semtimedop.