@@ -248,6 +248,10 @@
 # define __ASSUME_GETDENTS64_SYSCALL	1
 #endif
 
+#if defined __mips__ && defined _ABIN32 && _MIPS_SIM == _ABIN32
+# define __ASSUME_FCNTL64		1
+#endif
+
 /* The late 2.5 kernels saw a lot of new CLONE_* flags.  Summarize
    their availability with one define.  The changes were made first
    for i386 and the have to be done separately for the other archs.
